--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,8 @@
             <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-              <img src="{{ site.baseurl }}/img/logo.png" alt="Logo">
+              <img src="{{ site.baseurl }}/img/logo.jpg" alt="Logo" id="logo">
+	      Tailwind Investing
             </a>
           </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
